# blunders

./: .gitignore  Cargo.toml  README.md
.github/workflows/: macos_ci.yml  rust.yml  ubuntu_ci.yml  windows_ci.yml
blunders-engine/: Cargo.toml  README.md
blunders-engine/benches/: mates.rs  perft.rs  ttd.rs  zobrist.rs
blunders-engine/src/: arrayvec.rs  bitboard.rs  coretypes.rs  engine.rs  error.rs  eval.rs  evaluation.rs  fen.rs  game.rs  lib.rs  mailbox.rs  movegen.rs  movelist.rs  moveorder.rs  perft.rs  pieces.rs  position.rs  threads.rs  timeman.rs  transposition.rs  uci.rs  zobrist.rs
blunders-engine/src/arrayvec/: arrayvec.rs  mod.rs  opt_arrayvec.rs
blunders-engine/src/boardrepr/: mailbox.rs  mod.rs  piece_sets.rs
blunders-engine/src/movegen/: mod.rs  rays.rs  tables.rs
blunders-engine/src/search/: alpha_beta.rs  history.rs  ids.rs  minimax.rs  mod.rs  negamax.rs  quiescence.rs  search.rs
blunders-engine/tests/: bratko_kopec.rs  draws.rs  mates.rs  perft.rs  simple_tactics.rs
src/: main.rs  main_cli.rs
