[package]
authors = ["Paulo Lemus <plemus@hawaii.edu>"]
description = "UCI chess engine application"
keywords = ["chess", "engine", "checkmate", "game", "uci"]
repository = "https://github.com/paulolemus/blunders"
homepage = "https://github.com/paulolemus/blunders"
edition = "2021"
readme = "README.md"
license = "GPL-3.0-only"
name = "blunders"
default-run = "blunders"
publish = true
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["blunders-engine"]

[dependencies]
blunders-engine = { path = "blunders-engine", version = "0.1.0" }