[package]
authors = ["Paulo Lemus <plemus@hawaii.edu>"]
description = "UCI chess engine"
edition = "2018"
keywords = ["chess", "engine"]
name = "blunders-engine"
publish = false
readme = "README.md"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"
num_cpus = "1.13"

[[bench]]
name = "perft"
harness = false

[[bench]]
name = "mates"
harness = false