[package]
authors = ["Paulo Lemus <plemus@hawaii.edu>"]
description = "UCI chess engine"
edition = "2018"
keywords = ["chess", "engine", "blunder"]
name = "blunders-engine"
publish = false
readme = "README.md"
license = "GPL-3.0-only"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Pseudorandom numbers for Zobrist Hashing. TODO: optionally remove to precompute.
rand = "0.8.4" 
arrayvec = "0.7.1"

[dev-dependencies]
criterion = "0.3.5"
num_cpus = "1.13"

[[bench]]
name = "perft"
harness = false

[[bench]]
name = "mates"
harness = false

[[bench]]
name = "ttd"
harness = false

[[bench]]
name = "zobrist"
harness = false